<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/gradient2"
    tools:context=".pembibitan.GrafikPembibitan">

    <ImageView
        android:layout_width="70dp"
        android:contentDescription="Logo Aplikasi"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/tv_histori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:text="@string/jdl_grafik"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="60dp"
        android:gravity="top"
        >

        <LinearLayout
            android:id="@+id/LLchart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/suhu_udr"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="7dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green_1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="Logo Suhu"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_suhu" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/suhu_udara"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/suhu_tnh"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="7dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green_1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="Logo Suhu"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_suhu" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/suhu_tanah"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLchart2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LLchart"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/kelembapan_udr"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="7dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green_1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="Logo Kelembapan"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_kelembapan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hum_udr"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/kelembapan_tnh"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="7dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green_1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="Logo Kelembapan"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_kelembapan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hum_tnh"
                        android:textAlignment="center"
                        android:textColor="@color/green"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLchart3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LLchart2"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cahaya"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="7dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green_1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="Logo Cahaya"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_cahaya" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/cahaya"
                        android:textColor="@color/green"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </RelativeLayout>

<!--    Bottom Navigasi (RelativeLayout)-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@drawable/gradient2"
        app:itemIconTint="@drawable/color_states"
        app:itemTextColor="@drawable/color_states"
        app:menu="@menu/bottom_navigation" />

</RelativeLayout>